--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   flutter_webrtc: ^0.14.2
+  logger: ^2.6.0
+  web_socket_channel: ^2.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
